# servicex_client

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  pypi.yaml
examples/: single_file_uproot.py
servicex_client/: _version.py  configuration.py  dataset.py  dataset_identifier.py  minio_adpater.py  models.py  query_cache.py  servicex_adapter.py  servicex_client.py
servicex_client/app/: cache.py  cli_options.py  main.py  transforms.py
servicex_client/func_adl/: func_adl_dataset.py  servicex_dataset_source.py  servicex_func_adl_uproot.py  util.py
tests/: conftest.py  test_bigger_uproot.py  test_config.py  test_dataset_identifier.py  test_minio_adapter.py  test_query_cache.py  test_servicex_adapter.py  test_servicex_dataset.py  test_servicex_funcadl_uproot.py
